--- a/about.html
+++ b/about.html
@@ -13,16 +13,22 @@ permalink: /about/
     <div>
       <span>
         <b>TL;DR</b>
-        I have experience building applications in Ruby on Rails, Node, Graphql,
-        React and HTML/CSS. <a>Click here to view Resume.</a>
+        I build applications in Ruby on Rails, Node, Graphql, React and
+        HTML/CSS. I have experience working on agile teams and developing in a
+        microservices ecosystem
         <br />
         <br />
         I enjoy working in cross functional teams to deconstruct business
         problems into technical solutions.
         <br />
+        <a
+          href="https://docs.google.com/document/d/1-87BA3UU5OYHiyVQC8j3-oo5nhc_SKD3Xv85UtdTkq0/export?format=pdf"
+          style="font-size: small;"
+          >- Click here to view Resume</a
+        >
+        <br />
         <br />
         Boston, MA
-        <br />
       </span>
     </div>
   </section>
@@ -31,8 +37,8 @@ permalink: /about/
     <h2>A little more about me</h2>
     <span>
       I'm a software engineer at ezCater where I crank out features, review PRs,
-      mentor junior engineers and work with cross functional teams to solve our
-      business problems.
+      mentor junior engineers and work with awesome people to drive our business
+      number up.
       <br />
       <br />
       I Studied B.Sc. Mechanical Engineering (Hons.) and worked in a variety of
@@ -42,8 +48,12 @@ permalink: /about/
       began and decided swithed careers.
       <br />
       <br />
-      I currently live in Boston MA but I grew up on the island for Trinidad &
-      Tobago.
+      I currently live in Boston MA but I grew up on the island for
+      <a
+        href="https://www.google.com/maps/place/Trinidad+and+Tobago/data=!4m2!3m1!1s0x8c3607976350b6c5:0xff082855c639f127?sa=X&ved=2ahUKEwibkbGpyNDhAhUOUt8KHV32BQAQ8gEwAHoECAoQAQ"
+        target="_blank"
+        >Trinidad & Tobago</a
+      >
       <br />
       <br />
       I enjoy the beach, climbing trees, fishing and talking to animals (they
@@ -66,7 +76,31 @@ permalink: /about/
       >.
     </p>
     <button class="button">
-      <a>View Resume</a>
+      <a
+        href="https://docs.google.com/document/d/1-87BA3UU5OYHiyVQC8j3-oo5nhc_SKD3Xv85UtdTkq0/export?format=pdf"
+        >View Resume</a
+      >
     </button>
   </section>
+
+  <section>
+    <div id="map" class="iframe-pending">
+      <iframe
+        width="100%"
+        height="10%"
+        id="gmap_iframe"
+        src="https://maps.google.com/maps?q=Boston&t=&z=13&ie=UTF8&iwloc=&output=embed"
+        frameborder="0"
+        scrolling="no"
+        marginheight="0"
+        marginwidth="0"
+      ></iframe>
+    </div>
+  </section>
 </div>
+
+<script type="text/javascript">
+  document.getElementById("gmap_iframe").onload = function() {
+    document.getElementById("map").class = "iframe-loaded";
+  };
+</script>
