--- a/about.html
+++ b/about.html
@@ -12,23 +12,20 @@ permalink: /about/
     />
     <div>
       <span>
-        <b>TL;DR</b>
-        I build applications in Ruby on Rails, Node, Graphql, React and
-        HTML/CSS. I have experience working on agile teams and developing in a
-        microservices ecosystem
+        <b>Current Work:</b>
+        Software Engineer at
+        <a href="https://www.ezcater.com/">ezCater</a> using data to identify
+        and solve friction across our internal and external products.
         <br />
         <br />
-        I enjoy working in cross functional teams to deconstruct business
-        problems into technical solutions.
+        <b>Tecnhologies:</b> Ruby on Rails, Node, Graphql and React all
+        orchestrated in microservice environment.
         <br />
         <a
           href="https://docs.google.com/document/d/1-87BA3UU5OYHiyVQC8j3-oo5nhc_SKD3Xv85UtdTkq0/export?format=pdf"
           style="font-size: small;"
           >- Click here to view Resume</a
         >
-        <br />
-        <br />
-        Boston, MA
       </span>
     </div>
   </section>
@@ -36,28 +33,25 @@ permalink: /about/
   <section class="about-me2">
     <h2>A little more about me</h2>
     <span>
-      I'm a software engineer at ezCater where I crank out features, review PRs,
-      mentor junior engineers and work with awesome people to drive our business
-      number up.
+      I'm currently a software engineer at
+      <a href="https://www.ezcater.com/">ezCater.</a>
+      Building interesting things, with amazing people to solve challenging
+      problems constitutes my day to day. This comprises of a mix of working
+      with product teams to collect requirements, decomposing those requirements
+      to actionable units of work, setting up requirements for product launches,
+      delivering testable and maintainable code, mentoring other engineers,
+      participating in design discussions and code reviews.
       <br />
       <br />
-      I Studied B.Sc. Mechanical Engineering (Hons.) and worked in a variety of
-      different environments. At my last non-software-engineering job I
-      constantly found ways to improve the efficiency of my workspace by
-      utilizing software to automate tasks. This is where my passion for coding
-      began and decided swithed careers.
-      <br />
-      <br />
-      I currently live in Boston MA but I grew up on the island for
+      I currently live in Boston MA but I'm originally from the island of
       <a
         href="https://www.google.com/maps/place/Trinidad+and+Tobago/data=!4m2!3m1!1s0x8c3607976350b6c5:0xff082855c639f127?sa=X&ved=2ahUKEwibkbGpyNDhAhUOUt8KHV32BQAQ8gEwAHoECAoQAQ"
-        target="_blank"
-        >Trinidad & Tobago</a
+        >Trinidad & Tobago .</a
       >
       <br />
       <br />
       I enjoy the beach, climbing trees, fishing and talking to animals (they
-      don't talk back unfortunately). 😸 🌴 🏖 🎣 💻
+      don't talk back unfortunately)
     </span>
   </section>
 
@@ -67,16 +61,18 @@ permalink: /about/
   </section>
 
   <section class="resume">
-    <h2>What I've done & what I can do</h2>
+    <h2>What I've done</h2>
     <p>
       My professional histroy is documented in my resume below. If you have
       interesting problems to solve that my skillset is a match for, or any
       questions in general feel free to
       <a href="{{ site.baseurl }}/contact"><i>contact me</i></a
-      >.
+      >. Checkout some of my interesting side projects by visiting my
+      <a href="https://github.com/Julian-Jurai"><i>Github profile.</i></a>
     </p>
     <button class="button">
       <a
+        target="_blank"
         href="https://docs.google.com/document/d/1-87BA3UU5OYHiyVQC8j3-oo5nhc_SKD3Xv85UtdTkq0/export?format=pdf"
         >View Resume</a
       >
@@ -100,7 +96,7 @@ permalink: /about/
 </div>
 
 <script type="text/javascript">
-  document.getElementById("gmap_iframe").onload = function() {
+  document.getElementById("gmap_iframe").onload = function () {
     document.getElementById("map").class = "iframe-loaded";
   };
 </script>
